fix vertical alignment when player name > 1 lines.   fix unnecessary horizontal scrolling

--- a/assets/content/site.css
+++ b/assets/content/site.css
@@ -42,7 +42,10 @@
   border-top-right-radius: 0;
 }
 
-
+.players {
+    margin-left: -15px;
+    margin-right: -15px;
+}
 
 .card-container {
     position: relative;
@@ -94,6 +97,7 @@
         width: 90px;
         text-align: center;
         font-weight: bold;
+        overflow: hidden;
     }
 
 .game-board .btn {
@@ -103,6 +107,11 @@
 
 .game-board input[type=number] {
     height: 45px;
+}
+
+.player-container {
+    vertical-align: top;
+    display: inline-block;
 }
 
 /* START FLIPPING */
